<resources>
    <string name="app_name">MotionLock</string>
    <string name="app_desc">Open-Source Lock Privacy</string>

    <string name="app_github_dev">https://github.com/wesaphzt</string>
    <string name="app_github">https://github.com/wesaphzt/PrivateLock</string>

    <!--main-->
    <string name="main_lock_sensitivity_title">Set the lock sensitivity</string>
    <string name="main_lock_sensitivity_title_high">High</string>
    <string name="main_lock_sensitivity_title_low">Low</string>
    <string name="main_seek_low">0</string>
    <string name="main_seek_high">40</string>
    <string name="main_test_lock_sensitivity_title">Test the lock sensitivity</string>
    <string name="main_lock_sensitivity_title_arrow">→</string>
    <string name="sensitivity_value">Value: %1$s</string>

    <!--stats-->
    <string name="stats_last_breach_value_title">Last Breach Value:</string>
    <string name="stats_avg_breach_value_title">Avg. Breach Value:</string>
    <string name="stats_highest_breach_value_title">Highest Breach Value:</string>
    <string name="stats_zero">0</string>

    <!--intro-->
    <string name="slider_page_one_title">@string/app_name</string>
    <string name="slider_page_one_desc">MotionLock, the perfect companion to help protect your phone privacy and security.</string>
    <string name="slider_page_two_title">Protect Against Theft</string>
    <string name="slider_page_two_desc">If someone takes your phone while you\'re using it, your phone is unlocked and all your data is up for grabs.</string>
    <string name="slider_page_three_title">Always Running</string>
    <string name="slider_page_three_desc">Should something happen, your phone will be quickly locked, dependent on the sensitivity you\'ve set.
        \n\nDon\'t forget to disable battery optimization!</string>

    <!--actionbar-->
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <string name="action_settings">Settings</string>
    <string name="action_donate">Donate</string>
    <string name="action_show_intro">Show Intro</string>
    <string name="action_about">About</string>

    <!--titles-->
    <string name="fragment_donate_title">Donate</string>
    <string name="fragment_donate_clipboard_label">Copied address</string>
    <string name="fragment_donate_clipboard_message">Address copied to clipboard</string>
    <string name="fragment_about_title">About</string>

    <!--about-->
    <string name="about_overview_logo_desc">About overview app logo</string>

    <string name="about_contribute_card_title">Contribute</string>
    <string name="about_contribute_title">Report Bugs</string>
    <string name="about_contribute_desc">Report bugs or request new features</string>

    <string name="about_developer_image_desc">Author image</string>
    <string name="about_developer_title">wesaphzt</string>
    <string name="about_developer_desc">Developer</string>
    <string name="about_developer_card_title">Developer</string>

    <string name="about_version_title">Version</string>
    <string name="about_version_image_desc">Version image</string>

    <string name="about_license_title">License</string>
    <string name="about_license_desc">GPL v3.0</string>
    <string name="about_license_image_desc">License image</string>

    <string name="about_source_title">Source code</string>
    <string name="about_source_image_desc">Source code image</string>

    <string name="about_bug_report_image_desc">Bug report image</string>

    <!--message-->
    <string name="settings_restart_service_toast">If service is running, restart for setting to take effect.</string>

    <!--donate-->
    <string name="donate_bitcoin_image_desc">Bitcoin image</string>
    <string name="donate_litecoin_image_desc">Litecoin image</string>
    <string name="donate_ethereum_image_desc">Ethereum image</string>
    <string name="donate_monero_image_desc">Monero image</string>

    <string name="donate_note_text">If you find these apps useful, please consider supporting your local humane society or animal shelter.</string>
    <string name="donate_note_image_desc">Text emoji image</string>

    <!--widget-->
    <string name="widget_start_text">Start</string>
    <string name="widget_stop_text">Stop</string>

    <string name="widget_prefs_service_id">SERVICE_STATUS</string>
    <string name="widget_padlock_image_desc">Widget padlock image</string>

    <!--notification-->
    <string name="notification_main_channel_id">lock_notification_channel_id</string>
    <string name="notification_main_channel_name">Lock Notification Service</string>
</resources>
