<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_small"
            android:layout_marginBottom="@dimen/activity_margin_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/activity_margin_small">

                <ImageView
                    android:layout_width="@dimen/card_thumbnail_size"
                    android:layout_height="@dimen/card_thumbnail_size"
                    android:layout_marginEnd="@dimen/activity_margin_medium"
                    android:contentDescription="@string/about_overview_logo_desc"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_desc"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_small"
            android:layout_marginBottom="@dimen/activity_margin_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- version -->
                <LinearLayout
                    android:id="@+id/about_layout_version"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/listPreferredItemHeight"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/activity_margin_small"
                    android:paddingBottom="@dimen/activity_margin_small">

                    <ImageView
                        android:id="@+id/aboutImgVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_margin"
                        android:layout_marginEnd="@dimen/activity_margin_large"
                        android:contentDescription="@string/about_version_image_desc"
                        android:src="@drawable/ic_about_info_outline_24dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_version_title"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/about_text_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                    </LinearLayout>
                </LinearLayout>

                <!-- license -->
                <LinearLayout
                    android:id="@+id/about_layout_license"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/listPreferredItemHeight"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/activity_margin_small"
                    android:paddingBottom="@dimen/activity_margin_small">

                    <ImageView
                        android:id="@+id/aboutImgLicense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_margin"
                        android:layout_marginEnd="@dimen/activity_margin_large"
                        android:contentDescription="@string/about_license_image_desc"
                        android:src="@drawable/ic_about_copyright_24dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_license_title"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_license_desc"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                    </LinearLayout>
                </LinearLayout>

                <!-- source -->
                <LinearLayout
                    android:id="@+id/about_layout_source"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/listPreferredItemHeight"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/activity_margin_small"
                    android:paddingBottom="@dimen/activity_margin_small">

                    <ImageView
                        android:id="@+id/aboutImgSource"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_margin"
                        android:layout_marginEnd="@dimen/activity_margin_large"
                        android:contentDescription="@string/about_source_image_desc"
                        android:src="@drawable/ic_about_code_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_source_title"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_small"
            android:layout_marginBottom="@dimen/activity_margin_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_margin_small"
                    android:text="@string/about_developer_card_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <!-- developer -->
                <LinearLayout
                    android:id="@+id/aboutLayoutAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/activity_margin_small"
                    android:paddingBottom="@dimen/activity_margin_small">

                    <ImageView
                        android:id="@+id/aboutImgAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_margin"
                        android:layout_marginEnd="@dimen/activity_margin_large"
                        android:contentDescription="@string/about_developer_image_desc"
                        android:src="@drawable/ic_about_person_24dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_developer_title"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_developer_desc"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"

                        android:layout_margin="@dimen/activity_margin" />

                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_small"
            android:layout_marginBottom="@dimen/activity_margin_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_margin_small"
                    android:text="@string/about_contribute_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <!-- bug reports -->
                <LinearLayout
                    android:id="@+id/about_layout_bugs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/activity_margin_small"
                    android:paddingBottom="@dimen/activity_margin_small">

                    <ImageView
                        android:id="@+id/aboutImgBugs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_margin"
                        android:layout_marginEnd="@dimen/activity_margin_large"
                        android:contentDescription="@string/about_bug_report_image_desc"
                        android:src="@drawable/ic_about_bug_report_24dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_contribute_title"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_contribute_desc"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>